<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="consent_button_label">I have read and I accept these conditions</string>
    <string name="decline_button_label">I decline to consent</string>
    <string name="mosquito_alert_pop">&lt;p&gt; Help us in the fight against Dengue, Chickungunya, Yellow Fever, and Zika! Notify the presence of tiger mosquitoes (&lt;i&gt;Aedes albopictus&lt;/i&gt;), yellow fever mosquitoes (&lt;i&gt;Aedes aegypti&lt;/i&gt;), and their breeding sites.&lt;p&gt;\n&lt;p&gt;You can find more information at www.mosquitoalert.com&lt;/p&gt;\n&lt;p&gt;Thanks for your interest and participation,&lt;/p&gt;\n&lt;p&gt;The Mosquito Alert Team&lt;/p&gt;\n</string>
    <string-array name="gallery_array">
        
        <item name="gallery_array0">The main difference between the yellow fever mosquito (left) and the tiger mosquito (right), is right after its head, in the thorax: The yellow fever mosquito has 4 white lines with a lyre-shaped pattern, while the tiger mosquito has a single white line. &lt;b&gt;Foto: Vincent Robert (CC BY 2.0)&lt;/b&gt;</item>
        <item name="gallery_array1">Tiger mosquito (&lt;i&gt;Aedes albopictus&lt;/i&gt;). Its main characteristic is its black body with white lines and spots. Note the white line on the head and thorax. This female has the abdomen full of blood. &lt;b&gt; Photo: Roger Eritja (©)&lt;/ b&gt;</item>
        <item name="gallery_array2">Yellow fever mosquito (&lt;i&gt;Aedes aegypti&lt;/i&gt;). Recognized by its dark brown color with white lines and spots. Right above its head, in the thorax, it has 4 white lines with a lyre-shaped pattern. &lt;b&gt;Photo: James Gathany (ECDC, domini públic)&lt;/b&gt;</item>
        <item name="gallery_array3">Tiger mosquito &lt;i&gt;Ae. albopictus&lt;/i&gt;: Observe the black color that characterizes &lt;i&gt;Ae. albopictus&lt;/i&gt;. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;</item>
        <item name="gallery_array4">Yellow fever mosquito &lt;i&gt;Ae. aegypti&lt;/i&gt;: Observe the brown color that characterizes &lt;i&gt;Ae. aegypti&lt;/i&gt;. &lt;b&gt;Foto: Mark Yokoyama (CC BY 2.0)&lt;/b&gt;</item>
        <item name="gallery_array5">Who bites? Only female mosquitoes, and in this case females of tiger mosquito that usually bite during the day. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;</item>
        <item name="gallery_array6">Two female yellow fever mosquitoes. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;\n</item>
        <item name="gallery_array7">Tiger mosquito male (left) and female (right). The males have plumes on their heads. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;\n</item>
        <item name="gallery_array8">&lt;i&gt;Aedes&lt;/i&gt; eggs. The eggs are so small they are almost invisible to the naked eye. Female tiger and yellow fever mosquitoes lay eggs on the dry walls of small vessels near stagnant water. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;</item>
        <item name="gallery_array9">&lt;i&gt;Aedes&lt;/i&gt; mosquito larvae (longer) and pupae (rounder). The larvae are aquatic and they eventually turn into pupae to finally become adult mosquitoes. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;</item>
        <item name="gallery_array10">&lt;i&gt;Aedes&lt;/i&gt; larvae (longer) and pupae (rounder) in the water. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;</item>
        <item name="gallery_array11">Adult tiger mosquitoes emerge from pupae into the air. This process is known as metamorphosis. &lt;b&gt;Photo: Roger Eritja (©)&lt;/b&gt;</item>
    </string-array>
    <string name="toast_report_before_submitting_adult">Before submitting this mosquito report, please:</string>
    <string name="toast_complete_checklist">- complete the checklist</string>
    <string name="toast_specify_location">- specify a location</string>
    <string name="toast_attach_photo">- attach a photo of the breeding site</string>
    <string name="dataMap_CD">My Data</string>
    <string name="switchboard_button_text_report">REPORT</string>
    <string name="switchboard_button_text_sites">BREEDING SITE</string>
    <string name="switchboard_button_text_adult">MOSQUITO</string>
    <string name="switchboard_button_text_map">MY MAP</string>
    <string name="switchboard_button_text_gallery">GALLERY</string>
    <string name="switchboard_demo_popup">This is the demo version of Mosquito Alert. With this version you cannot share data. If you want to participate in the project by contributing data, please click OK to install the full Mosquito Alert application. (If you already have the full version, you can uninstall the demo at any time.)</string>
    <string name="activity_label_report_new">Mosquito Alert: New Report</string>
    <string name="activity_label_map">Mosquito Alert: My Map</string>
    <string name="activity_label_gallery">Mosquito Alert: Gallery</string>
    <string name="report_title_adult">Mosquito</string>
    <string name="checklist_label">Add description*</string>
    <string name="location_label">Add location*</string>
    <string name="location_current_label_button">Current</string>
    <string name="location_select_label_button">Select</string>
    <string name="location_menu_title">Use current location or select location from map?</string>
    <string name="photo_check_label">Add photo(s)</string>
    <string name="note_check_label">Add note</string>
    <string name="update">Update</string>
    <string name="created_on">Sent:</string>
    <string name="delete_report_warning">Are you sure you want to delete this report?</string>
    <string name="word_report">Report</string>
    <string name="photo_label">Photo(s)</string>
    <string name="photo_label_star">Photo(s)*</string>
    <string name="return_to_map">Back</string>
    <string name="delete_report">Delete</string>
    <string name="report_not_saved_warning">This report has not been saved. Are you sure you want to exit?</string>
    <string name="exit_question">Exit?</string>
    <string name="no_note_attached">No note attached</string>
    <string name="no_photo_attached">No photo attached</string>
    <string name="checklist_tab_title">Checklist</string>
    <string name="photos_tab_title">Photos</string>
    <string name="notes_tab_title">Notes</string>
    <string name="view_report_title_adult">Mosquito</string>
    <string name="photo_selector_title">Add Photos</string>
    <string name="photo_selector_take_photo_button">Take new photo</string>
    <string name="photo_selector_attach_photo_button">Attach from file</string>
    <string name="photo_selector_remove_attachment">Remove Attachment</string>
    <string name="photo_selector_remove_this_photo">Remove this photo</string>
    <string name="photo_selector_from_thisreport">from this report</string>
    <string name="photo_selector_remove_button_label">Remove</string>
    <string name="rss_internet_connection_warning">No internet connection.\n\nTo view the feed, please connect to the internet and select \'refresh\' from the menu.</string>
    <string name="rss_title_tigatrapp">News from mosquitoalert.com</string>
    <string name="task_list_title">Missions</string>
    <string name="task_list_pending">Pending</string>
    <string name="task_list_completed">Complete</string>
    <string name="delete_task_from_list_question">Delete mission from list?</string>
    <string name="delete">Delete</string>
    <string name="new_mission">New Mosquito Alert mission!</string>
    <string name="mission_button_left_survey">Submit responses</string>
    <string name="mission_button_left_url">Visit webpage</string>
    <string name="mission_button_middle">Do mission later</string>
    <string name="mission_button_right">Delete mission</string>
    <string name="mission_button_mark_complete">Mark complete</string>
    <string name="toast__mission_already_complete">You have already completed this mission. Thank you!</string>
    <string name="toast_mission_expired">This mission has expired.</string>
    <string name="menu_option_task_list">Missions</string>
    <string name="menu_option_tigatrapp_news">News</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_help">Help</string>
    <string name="menu_option_about">More info</string>
    <string name="menu_option_share">Share</string>
    <string name="menu_option_gallery">Gallery</string>
    <string name="menu_option_tutorial">Tutorial app</string>
    <string name="menu_option_login">Login</string>
    <string name="menu_option_logout">Logout</string>
    <string name="menu_option_filter">Filter</string>
    <string name="menu_option_map_type_label">Map Type</string>
    <string name="menu_option_map_type_satellite">Satellite Map</string>
    <string name="menu_option_map_type_street">Street Map</string>
    <string name="menu_option_share_map">Share Map</string>
    <string name="menu_option_save_map">Save Map</string>
    <string name="add_note">If you want, you can write a message here for the research team. For example, you can describe the mosquito in more detail. Don\'t add personal information.</string>
    <string name="cancel">Cancel</string>
    <string name="notes_title">Message</string>
    <string name="ok">OK</string>
    <string name="app_name" translatable="false">Mosquito Alert</string>
    <string name="i18n_question1">Do you see a mosquito in this photo?</string>
    <string name="i18n_easy_right">It looks easy, right?</string>
    <string name="i18n_tellme">So tell us if you see a mosquito.</string>
    <string name="i18n_letsgo">Let\'s go!</string>
    <string name="i18n_whatmosquito">What mosquito is it?</string>
    <string name="i18n_wesearch">We are looking for tiger mosquitoes or yellow fever mosquitoes, but other species can also get in.</string>
    <string name="i18n_nextscreen">On the next screen we explain how to recognize them.</string>
    <string name="i18n_tiger">Tiger Mosquito</string>
    <string name="i18n_whitestripes">It is small (&lt;1 cm), black, with horizontal white lines on the abodmen.</string>
    <string name="i18n_whitelinehead">It has a vertical white line just after the head, in the thorax.</string>
    <string name="i18n_stripedlegs">Striped legs.</string>
    <string name="i18n_examples">Examples</string>
    <string name="i18n_thorax">Thorax</string>
    <string name="i18n_abdomen">Abdomen</string>
    <string name="i18n_ok2">OK!</string>
    <string name="i18n_yellowfever">Yellow Fever Mosquito</string>
    <string name="i18n_smallblackish">It is small (&lt;1 cm), blackish brown and has horizontal white and wide lines on the abdomen. On each side of these lines there are round white spots.</string>
    <string name="i18n_stripedlegs2">Striped legs.</string>
    <string name="i18n_examples2">Examples</string>
    <string name="i18n_thorax2">Thorax</string>
    <string name="i18n_abdomen2">Abdomen</string>
    <string name="i18n_ok3">OK!</string>
    <string name="i18n_whichparts">Which parts have you recognized?</string>
    <string name="i18n_markparts">The most recognisable part of the mosquito is the torax drawing. Do you recognise the drawing in the picture?</string>
    <string name="i18n_tigermosquito">Tiger Mosquito</string>
    <string name="i18n_thorax3">Thorax</string>
    <string name="i18n_yellowfever2">Yellow Fever Mosquito</string>
    <string name="i18n_understood">Understood!</string>
    <string name="menu_web">mosquitoalert.com</string>
    <string name="type_here">Use this space to include a note or comments if necessary. Don\'t add personal information.</string>
    <string name="help_zoom">Zoom in with fingers to expand the image view.</string>
    <string name="tutorial_1_1">Welcome</string>
    <string name="tutorial_1_2">Check this short guide before starting using the app</string>
    <string name="tutorial_1_3">SEE GUIDE</string>
    <string name="tutorial_1_4">Skip</string>
</resources>