<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/shareApp"
        android:title="@string/menu_option_share">
    </item>
    <item
        android:id="@+id/web"
        android:title="@string/menu_web">
    </item>
    <item
        android:id="@+id/gallery"
        android:title="@string/menu_option_gallery">
    </item>
    <item
        android:id="@+id/tutorial"
        android:title="@string/menu_option_tutorial">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/menu_option_settings">
    </item>

    <item
        android:id="@+id/about"
        android:title="@string/menu_option_about">
    </item>
    <item
        android:id="@+id/logout"
        android:title="@string/menu_option_logout">
    </item>
</menu>