<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

 <!--   <item
        android:id="@+id/taskList"
        android:title="@string/menu_option_task_list">
    </item>-->
    <item
        android:id="@+id/gallery"
        android:title="@string/menu_option_gallery">
    </item>
    <item
        android:id="@+id/tigatrappNews"
        android:title="@string/menu_option_tigatrapp_news">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/menu_option_settings">
    </item>
    <item
        android:id="@+id/help"
        android:title="@string/menu_option_help">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/menu_option_about">
    </item>
    <item
        android:id="@+id/shareApp"
        android:title="@string/menu_option_share">
    </item>
   <item
       android:id="@+id/web"
       android:title="@string/menu_web">
   </item>

    <item
        android:id="@+id/login"
        android:title="Login">
    </item>
</menu>