<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/switchboard_bg" >

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        style="@style/ValidationHelpTitle" />-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/mosquito_img"
        style="@style/ValidationHelpImage"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/ValidationHelpSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i18n_question1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i18n_easy_right"
        style="@style/ValidationHelpText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i18n_tellme"
        style="@style/ValidationHelpText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_zoom"
        style="@style/ValidationHelpText" />

    <Button
        android:id="@+id/validHelpCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="240dp"
        android:text="@string/i18n_letsgo"
        style="@style/ValidationHelpButton" />

</LinearLayout>

</ScrollView>